<resources>
    <string name="app_name">Raksha</string>
    <string name="todo">TODO</string>
    <string name="name">Name</string>
    <string name="usernname">Usernname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register1">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">login</string>
    <string name="Login">Login</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login1">Login</string>
</resources>